[package]
name = "todo_actix_pub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.160", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["mysql", "runtime-actix-native-tls"] }
dotenv = "0.15.0"
anyhow = "1.0.70"
env_logger = "0.10.0"
log = "0.4.17"
